# pikud-haoref-bulb

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
samples/: oref.results.json
src/pikud_haoref_bulb/: __main__.py  notify.py  requester.py  types.py
src/shaboref/: __main__.py  notify.py  requester.py
tests/: conftest.py  test_pikud.py
