[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pikud-haoref-bulb"
version = "0.2.1"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "h2>=4.3.0",
    "httpx>=0.27",
    "loguru>=0.7.3",
    "yeelight>=0.7.16",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.19",
    "pytest>=9",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pikud_haoref_bulb"]

[tool.ruff]
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

